kubernetes-v2/charts/service/tests/snapshots/env-securitycontext.yaml
---
# Source: service/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-release
spec:
  selector:
    app: test-release
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080

---
# Source: service/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-release
  labels:
    app: test-release
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: test-release
  template:
    metadata:
      labels:
        app: test-release
    spec:
      tolerations:
        - effect: NoExecute
          key: node.kubernetes.io/unreachable
          tolerationSeconds: 10
      containers:
        - name: test-release
          image: example/app:1.0.0
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 1000
            runAsUser: 1000
          env:
            - name: DOMAINS
              value: "example.com"
            - name: PROXIED
              value: "true"
