kubernetes-v2/charts/service/tests/snapshots/external-secret.yaml
---
# Source: service/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-release
spec:
  selector:
    app: test-release
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080

---
# Source: service/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-release
  labels:
    app: test-release
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: test-release
  template:
    metadata:
      labels:
        app: test-release
    spec:
      tolerations:
        - effect: NoExecute
          key: node.kubernetes.io/unreachable
          tolerationSeconds: 10
      containers:
        - name: test-release
          image: example/app:1.0.0
          ports:
            - containerPort: 8080
          env:
            - name: TOKEN
              valueFrom:
                secretKeyRef:
                  name: app-secret
                  key: token

---
# Source: service/templates/externalsecret.yaml
apiVersion: external-secrets.io/v1
kind: ExternalSecret
metadata:
  name: "app-secret"
spec:
  refreshInterval: "15s"
  secretStoreRef:
    name: "vault-homelab"
    kind: ClusterSecretStore
  target:
    name: "app-secret"
    creationPolicy: Owner
    deletionPolicy: Retain
  data:
    - secretKey: "token"
      remoteRef:
        key: "secret/prod/app"
        property: "token"
        conversionStrategy: Default
        decodingStrategy: None
        metadataPolicy: None
        nullBytePolicy: Ignore
