kubernetes-v2/charts/service/tests/snapshots/storage-pvc.yaml
---
# Source: service/templates/pvc.yaml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: app-data
spec:
  storageClassName: "local-path"
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 5Gi

---
# Source: service/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-release
spec:
  selector:
    app: test-release
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080

---
# Source: service/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-release
  labels:
    app: test-release
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: test-release
  template:
    metadata:
      labels:
        app: test-release
    spec:
      tolerations:
        - effect: NoExecute
          key: node.kubernetes.io/unreachable
          tolerationSeconds: 10
      containers:
        - name: test-release
          image: example/app:1.0.0
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: storage
              mountPath: /app/data
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: app-data
